--- a/index.html
+++ b/index.html
@@ -2243,8 +2243,8 @@
         ];
 
         const seriesData = {
-            'Bleach': {
-                title: 'Bleach',
+            'Bleach (VOSTFR)': {
+                title: 'Bleach (VOSTFR)',
                 synopsis: 'Ichigo, un lycéen rebelle, reçoit les pouvoirs d’un dieu de la mort et découvre un monde d’esprits et de créatures maléfiques. Entre devoir et survie, il devient le dernier rempart entre les vivants et les ténèbres.',
                 poster: 'https://m.media-amazon.com/images/I/71WTDi39iPL._AC_UF1000,1000_QL80_.jpg',
                 seasons: {
